--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ const merekWargaGlobal = {
     "FAJAR DJAKA": "VIVAN", "AGUS": "BLACKBERRY", "LUKMAN": "POCO",
     "IRAWAN": "NOKIA", "RIAN": "SAMSUNG", "MULYADIE": "SONY",
     "HELDI": "ASUS", "HILMAN": "HUAWEI", "NANO": "SMARTFREN", "TEGUH": "VIVO",
-    "FAJAR SHANUM": ["INFINIX HOT 12 PLAY", "ADVAN TBOOK", "APPLE IPHONE X", "SAMSUNG A06", "INFINIX HOT 9 PLAY", "POCO C71"]
+    "FAJAR SHANUM": ["INFINIX HOT 12 PLAY", "ADVAN TBOOK", "APPLE IPHONE X", "INFINIX HOT 9 PLAY", "SAMSUNG A06", "POCO C71"]
 };
 
 /* Fungsi Pembentuk Topeng Urutan Terkunci ID */
@@ -1333,6 +1333,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
