--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.8.8</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.9.0</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -346,7 +346,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.8.8 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.9.0 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -825,6 +825,25 @@ function updateProgressBarPatungan(terkumpul, total) {
         document.getElementById('targetTotal').innerText = "Target: Rp " + total.toLocaleString('id-ID');
     }
 }
+// Fungsi untuk menghitung progress bar secara otomatis tanpa buka modal
+function hitungProgressOtomatis() {
+    let targetPerOrang = 50000;
+    db.ref("target_patungan").once("value", (snapshot) => {
+        const dbData = snapshot.val() || {};
+        let totalTerkumpul = 0;
+        
+        namaAnggotaAwal.forEach((nama) => {
+            let idWarga = nama.replace(/\s+/g, '_');
+            let d = dbData[idWarga] || { masuk: 0 };
+            totalTerkumpul += parseInt(d.masuk) || 0;
+        });
+        
+        updateProgressBarPatungan(totalTerkumpul, namaAnggotaAwal.length * targetPerOrang);
+    });
+}
+
+// Jalankan fungsi hitung ini setiap kali halaman di-refresh
+window.addEventListener('load', hitungProgressOtomatis);
 // --- SELESAI FUNGSI TARGET PATUNGAN ---
 function toggleMenu() { document.getElementById('menuItems').classList.toggle('show'); }
 // ================= FORM USULAN WARGA =================
@@ -1465,6 +1484,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
