--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.9.1</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.9.2</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -346,7 +346,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.9.1 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.9.2 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -771,6 +771,7 @@ function muatDataTargetPatungan() {
         
         // 2. Loop HANYA berdasarkan namaAnggotaAwal (Rizal s/d Teguh)
         namaAnggotaAwal.forEach((nama) => {
+            if (nama === "SISA KAS SEBELUMNYA") return;
             let idWarga = nama.replace(/\s+/g, '_');
             // Jika nama tidak ada di database, tampilkan nilai default (kosong/0)
             let d = dbData[idWarga] || { tgl: '-', ket: 'Belum Bayar', masuk: 0 };
@@ -833,6 +834,7 @@ function hitungProgressOtomatis() {
         let totalTerkumpul = 0;
         
         namaAnggotaAwal.forEach((nama) => {
+            if (nama === "SISA KAS SEBELUMNYA") return;
             let idWarga = nama.replace(/\s+/g, '_');
             let d = dbData[idWarga] || { masuk: 0 };
             totalTerkumpul += parseInt(d.masuk) || 0;
@@ -1484,6 +1486,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
