--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@ button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
 table{width:100%;border-collapse:collapse}
 th,td{border:1px solid var(--border);padding:6px;text-align:left}
 th{text-align:center; background:#eee; color:#000}
+/* MENANDAI AREA YANG BISA DIEDIT OLEH ADMIN */
+        #tbTargetPatungan td[contenteditable="true"] {
+            background-color: #fffde7; /* Kuning Gading */
+            cursor: text;
+            transition: all 0.3s ease;
+        }
+        #tbTargetPatungan td[contenteditable="true"]:hover {
+            background-color: #fff9c4;
+            outline: 1px solid #fbc02d;
+        }
+        #tbTargetPatungan td[contenteditable="true"]:focus {
+            background-color: #ffffff;
+            outline: 2px solid #1976d2; /* Biru saat mulai mengetik */
+            box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
+        }
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit; color:inherit; background:transparent;}
 /* --- CYBERPUNK THEME --- */
 .theme-cyberpunk{--bg:#050505;--card:#0f0f0f;--text:#00ffcc;--border:#ff00ff;--accent:#ffff00;--yellow:#ffff00;}
@@ -208,7 +223,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.9.4</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.9.5</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -353,7 +368,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.9.4 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.9.5 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -804,6 +819,38 @@ function muatDataTargetPatungan() {
                 </td>
             `;
         });
+
+        // AMBIL SALDO AKHIR KAS (MENGGUNAKAN ID saldoAkhir SESUAI FILE ASLI)
+        const saldoKasTeks = document.getElementById('saldoAkhir').innerText; 
+        const saldoKasAngka = parseInt(saldoKasTeks.replace(/[^0-9]/g, '')) || 0;
+        const totalSemua = totalTerkumpul + saldoKasAngka;
+
+        // 1. TAMBAHKAN BARIS TOTAL UANG PATUNGAN
+        let rowTotal = tabel.insertRow();
+        rowTotal.innerHTML = `
+            <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#f9f9f9;">TOTAL UANG PATUNGAN TERKUMPUL</td>
+            <td style="text-align:center; padding:10px; font-weight:bold; background:#e1f5fe; color:#01579b;">Rp ${totalTerkumpul.toLocaleString('id-ID')}</td>
+            <td style="text-align:center; padding:10px; font-weight:bold; background:#f9f9f9;">-</td>
+            <td class="admin-action" style="background:#f9f9f9;"></td>
+        `;
+
+        // 2. TAMBAHKAN BARIS TOTAL KAS SAAT INI
+        let rowKas = tabel.insertRow();
+        rowKas.innerHTML = `
+            <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#f9f9f9;">TOTAL KAS SAAT INI (SALDO AKHIR)</td>
+            <td style="text-align:center; padding:10px; font-weight:bold; background:#fff9c4; color:#f57f17;">Rp ${saldoKasAngka.toLocaleString('id-ID')}</td>
+            <td style="text-align:center; padding:10px; font-weight:bold; background:#f9f9f9;">-</td>
+            <td class="admin-action" style="background:#f9f9f9;"></td>
+        `;
+
+        // 3. TAMBAHKAN BARIS GRAND TOTAL
+        let rowGrandTotal = tabel.insertRow();
+        rowGrandTotal.innerHTML = `
+            <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#e91e63; color:white;">TOTAL UANG PATUNGAN TERKUMPUL + SALDO AKHIR KAS</td>
+            <td style="text-align:center; padding:10px; font-weight:bold; background:#e91e63; color:white;">Rp ${totalSemua.toLocaleString('id-ID')}</td>
+            <td style="text-align:center; padding:10px; font-weight:bold; background:#e91e63; color:white;">-</td>
+            <td class="admin-action" style="background:#e91e63;"></td>
+        `;
         
         updateProgressBarPatungan(totalTerkumpul, namaAnggotaAwal.length * targetPerOrang);
     });
@@ -1550,6 +1597,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
