--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.0.0</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.0.3</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -265,7 +265,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div class="menu-container" id="mainMenuContainer">
     <button class="main-menu" onclick="toggleMenu()">☰ MENU</button>
     <div class="menu-items" id="menuItems">
-        <button id="adminBtn" class="off">⛔ ADMIN OFF 🔒</button>
+        <button id="adminBtn" class="off" onclick=adminLoginBox.style.display='block'">⛔ ADMIN OFF 🔒</button>
         <div id="adminTools">
             <button onclick="tambahBaris('WARGA')" style="background:#28a745; color:#fff;">👤 TAMBAH WARGA</button>
             <button onclick="tambahBaris('LAIN')" style="background:#17a2b8; color:#fff;">📥 TAMBAH PEMASUKAN</button>
@@ -368,7 +368,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.0.0 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.0.2 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -432,6 +432,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script>
  // FUNGSI PEREKAM SIDIK JARI DIGITAL (HWID)
@@ -902,6 +903,7 @@ function hitungProgressOtomatis() {
 window.addEventListener('load', hitungProgressOtomatis);
 
 function simpanSettingTarget() {
+    if(!isAdmin) return alert("AKSES DITOLAK: Anda bukan Admin!");
     const nama = document.getElementById('inputNamaTarget').value;
     const nominal = document.getElementById('inputNominalTarget').value;
     if(!nama || !nominal) return alert("Isi nama target dan nominalnya!");
@@ -1561,8 +1563,26 @@ window.onbeforeunload = function() {
         <button onclick="document.getElementById('modalPerangkat').style.display='none'" style="width:100%; background:#ff4444; color:#fff; padding:12px; border:none; border-radius:5px; cursor:pointer; font-weight:bold; margin-top:20px;">TUTUP PANEL</button>
     </div>
 </div>
+<div id="adminLoginBox" style="
+  display:none;
+  position:fixed;
+  top:50%; left:50%;
+  transform:translate(-50%,-50%);
+  background:#111;
+  padding:20px;
+  border:2px solid gold;
+  z-index:9999;
+">
+  <h3>LOGIN ADMIN</h3>
+  <input id="adminEmail" placeholder="Email admin"><br><br>
+  <input id="adminPass" type="password" placeholder="Password"><br><br>
+  <button onclick="loginAdmin()">LOGIN</button>
+  <button onclick="adminLoginBox.style.display='none'">BATAL</button>
+</div>
+ 
 </body>
 </html>
+
 
 
 
