--- a/index.html
+++ b/index.html
@@ -1547,6 +1547,20 @@ window.hapusPerangkat = (fPrintID) => {
 window.onbeforeunload = function() {
     return "ANDA YAKIN INGIN MENYEGARKAN HALAMAN? DATA YANG BELUM DISIMPAN MUNGKIN AKAN HILANG!";
 };
+function loginAdmin(){
+  const email = document.getElementById("adminEmail").value;
+  const pass  = document.getElementById("adminPass").value;
+
+  firebase.auth().signInWithEmailAndPassword(email, pass)
+    .then(()=>{
+      alert("ADMIN ON");
+      adminLoginBox.style.display = "none";
+    })
+    .catch(err=>{
+      alert("Login gagal: " + err.message);
+    });
+}
+
 </script>
 <div id="modalPerangkat" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:9999; align-items:center; justify-content:center; padding:20px; box-sizing:border-box;">
     <div style="background:#fff; width:100%; max-width:800px; border-radius:10px; padding:20px; color:#000; max-height:90vh; overflow-y:auto;">
@@ -1585,6 +1599,7 @@ window.onbeforeunload = function() {
  
 </body>
 </html>
+
 
 
 
