--- a/index.html
+++ b/index.html
@@ -638,6 +638,7 @@ function getSystemIntel() {
 }
 
 async function masukWeb() {
+    alert("MASUK WEB DIPANGGIL");
     let kunci = prompt("🔑 Masuk pakai nomor rumah masing-masing yaa pak!\n\nTULIS DISINI NOMOR RUMAH ANDA :");
     if (!kunci) return;
     
@@ -1614,6 +1615,7 @@ function loginAdmin(){
  
 </body>
 </html>
+
 
 
 
