--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.0.9</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.0.3</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -265,7 +265,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div class="menu-container" id="mainMenuContainer">
     <button class="main-menu" onclick="toggleMenu()">☰ MENU</button>
     <div class="menu-items" id="menuItems">
-        <button id="adminBtn" class="off" onclick="adminLoginBox.style.display='block'">⛔ ADMIN OFF 🔒</button>
+        <button id="adminBtn" class="off" onclick=adminLoginBox.style.display='block'">⛔ ADMIN OFF 🔒</button>
         <div id="adminTools">
             <button onclick="tambahBaris('WARGA')" style="background:#28a745; color:#fff;">👤 TAMBAH WARGA</button>
             <button onclick="tambahBaris('LAIN')" style="background:#17a2b8; color:#fff;">📥 TAMBAH PEMASUKAN</button>
@@ -368,7 +368,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.0.9 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.0.2 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -840,7 +840,7 @@ function tambahBarisRingkasan(tabel, totalTerkumpul) {
     // Baris Total Patungan
     let rowTotal = tabel.insertRow();
     rowTotal.innerHTML = `
-        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#f9f9f9;">TOTAL UANG PATUNGAN YG TERKUMPUL</td>
+        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#f9f9f9;">TOTAL PATUNGAN</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#e1f5fe; color:#01579b;">Rp ${totalTerkumpul.toLocaleString('id-ID')}</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#f9f9f9;">-</td>
         <td class="admin-action" style="background:#f9f9f9;"></td>
@@ -849,7 +849,7 @@ function tambahBarisRingkasan(tabel, totalTerkumpul) {
     // Baris Grand Total
     let rowGrand = tabel.insertRow();
     rowGrand.innerHTML = `
-        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#e91e63; color:white;">TOTAL UANG PATUNGAN YG TERKUMPUL + SALDO AKHIR KAS</td>
+        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#e91e63; color:white;">TOTAL + SALDO KAS</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#e91e63; color:white;">Rp ${totalSemua.toLocaleString('id-ID')}</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#e91e63; color:white;">-</td>
         <td class="admin-action" style="background:#e91e63;"></td>
@@ -1373,8 +1373,6 @@ function uploadBackup(event) {
     };
     reader.readAsText(file);
 }
-
-/*
 document.getElementById('adminBtn').onclick = async function() {
  if(!isAdmin){
   let u=prompt('QS. Al-Insyirah: 5-6'), p=prompt('Sesungguhnya bersama kesulitan ada kemudahan');
@@ -1409,7 +1407,6 @@ document.getElementById('adminBtn').onclick = async function() {
  }
  toggleMenu();
 };
-*/
 function prevMonth(){ bulan--; if(bulan<0){bulan=11; tahun--;} updateUI(); }
 function nextMonth(){ bulan++; if(bulan>11){bulan=0; tahun++;} updateUI(); }
 function updateUI(){ document.getElementById('periode').textContent=namaBulan[bulan]+' '+tahun; loadData(); }
@@ -1547,32 +1544,6 @@ window.hapusPerangkat = (fPrintID) => {
 window.onbeforeunload = function() {
     return "ANDA YAKIN INGIN MENYEGARKAN HALAMAN? DATA YANG BELUM DISIMPAN MUNGKIN AKAN HILANG!";
 };
-function loginAdmin(){
-  const email = document.getElementById("adminEmail").value;
-  const pass  = document.getElementById("adminPass").value;
-
-  firebase.auth().signInWithEmailAndPassword(email, pass)
-    .then(()=>{
-  isAdmin = true;
-
-  const btn = document.getElementById("adminBtn");
-  btn.textContent = "✅ ADMIN ON 🔓";
-  btn.className = "primary";
-
-  document.getElementById("adminTools").style.display = "flex";
-
-  applyAdminLock();
-  recalc();
-
-  alert("ADMIN ON");
-  adminLoginBox.style.display = "none";
-})
-
-    .catch(err=>{
-      alert("Login gagal: " + err.message);
-    });
-}
-
 </script>
 <div id="modalPerangkat" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:9999; align-items:center; justify-content:center; padding:20px; box-sizing:border-box;">
     <div style="background:#fff; width:100%; max-width:800px; border-radius:10px; padding:20px; color:#000; max-height:90vh; overflow-y:auto;">
@@ -1611,6 +1582,7 @@ function loginAdmin(){
  
 </body>
 </html>
+
 
 
 
