--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.2.7</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.2.8</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -368,7 +368,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.2.7 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.2.8 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -840,7 +840,7 @@ function tambahBarisRingkasan(tabel, totalTerkumpul) {
     // Baris Total Patungan
     let rowTotal = tabel.insertRow();
     rowTotal.innerHTML = `
-        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#f9f9f9;">TOTAL PATUNGAN</td>
+        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#f9f9f9;">TOTAL UANG PATUNGAN YG TERKUMPUL</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#e1f5fe; color:#01579b;">Rp ${totalTerkumpul.toLocaleString('id-ID')}</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#f9f9f9;">-</td>
         <td class="admin-action" style="background:#f9f9f9;"></td>
@@ -849,7 +849,7 @@ function tambahBarisRingkasan(tabel, totalTerkumpul) {
     // Baris Grand Total
     let rowGrand = tabel.insertRow();
     rowGrand.innerHTML = `
-        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#e91e63; color:white;">TOTAL + SALDO KAS</td>
+        <td colspan="3" style="text-align:right; padding:10px; font-weight:bold; background:#e91e63; color:white;">TOTAL UANG PATUNGAN YG TERKUMPUL + TOTAL SALDO KAS</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#e91e63; color:white;">Rp ${totalSemua.toLocaleString('id-ID')}</td>
         <td style="text-align:center; padding:10px; font-weight:bold; background:#e91e63; color:white;">-</td>
         <td class="admin-action" style="background:#e91e63;"></td>
@@ -1588,6 +1588,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
